--- a/mobile2/mobile2.Android/mobile2.Android.csproj
+++ b/mobile2/mobile2.Android/mobile2.Android.csproj
@@ -106,5 +106,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ajout.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pokeball.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
